<resources>
  <string name="signalong" translation_description="The launcher name.">SignAlong</string>
  <string name="app_name">手语数据收集</string>
  <!-- activity_collect_data_menu-->
  <string name="btn_standard_data">标准数据</string>
  <string name="btn_test_data">测试数据</string>
  <string name="title_data_collect">收集数据</string>
  <!-- activity_main -->
  <string name="btn_data_collection">收集数据</string>
  <string name="btn_data_socre">数据评分</string>

  <!-- fragment_standard_data -->
  <string name="btn_from_thesaurus">从词库选名词</string>
  <string name="btn_define_name">定义名词</string>
  <!-- fragment_test_data -->
  <string name="btn_add_video">添加视频</string>
  <string name="tv_data_name">名称:</string>
  <string name="btn_upload">上传</string>
  <string name="dialog_upload_success">上传成功</string>
  <string name="toast_url_not_empty">地址不能为空</string>
  <string name="toast_file_not_exist">文件不存在</string>
  <string name="toast_name_not_empty">名称不能为空</string>

  <!-- activity_login -->
  <string name="title_login">登录</string>
  <string name="tv_username">用户名</string>
  <string name="tv_password">密码</string>
  <string name="btn_login">登录</string>
  <string name="btn_register">注册</string>
  <string name="tip_password_empty">密码为空</string>
  <string name="tip_username_empty">用户为空</string>
  <string name="tip_login_fail">登陆失败</string>
  <string name="tip_login_success">登陆成功</string>
  <string name="tip_network_error">网络错误</string>

  <!-- activity_camera -->
  <string name="btn_record_start">开始录制</string>
  <string name="btn_record_stop">停止录制</string>
  <string name="start">开始</string>
  <string name="btn_record_back">重新录制</string>
  <string name="btn_confirm_submit">确认提交</string>
  <string name="tip_video_no_exist">该视频不存在</string>
  <string name="tip_finish">完成</string>
  <string name="tip_fail">失败</string>
  <string name="tip_connect_fail">连接失败</string>
  <string name="tip_token_fail">口令失效</string>
  <string name="tip_camera_disconnect">断开连接</string>
  <string name="tip_camera_error">错误</string>
  <string name="tip_refuse_permission">本应用需要摄像头及存储权限，否则无法正常运行</string>
  <string name="label_select_multi_items">请选择项目！！！</string>
  <string name="btn_start_learn">开始学习</string>
  <string name="btn_start_record">开始录制</string>
  <string name="label_counter">第 %1$d 题</string>
  <string name="btn_cancel">关闭</string>
  <string name="demonstration">示范</string>
  <string name="thanks">"这次你录制了%d个视频，谢谢啦！"</string>
  <string name="please_sign">请打手语: %s</string>
  <string name="open_camera_failed">打开相机失败</string>
  <string name="camera_error">This device doesn\'t support Camera2 API.</string>

  <string name="label_recording_session_summary">"这次你录制了%d个视频，谢谢啦！"</string>
  <!-- Recording session header -->
  <string name="label_recording_task_title">任务 %1$d： %s</string>

  <!-- fragment_reference_video_view -->
  <string name="label_reference_video_title">通用手语示范</string>
  <string name="btn_start_recording">开始录制</string>

  <!-- fragment_recorded_view_view -->
  <string name="label_recorded_video_title">检查刚录制的视频</string>
  <string name="btn_retry">重录</string>
  <string name="btn_submit">提交</string>

  <!-- back_title -->
  <string name="btn_back">返回</string>

  <!-- sign_along_camera -->
  <string name="btn_open_camera">进入录制视频</string>

  <!-- activity_sign_along -->
  <string name="label_recording_task_page_title">待录制</string>
  <string name="label_review_task_page_title">待评审</string>
  <string name="label_my_recording_page_title">已录制</string>
  <string name="label_recording_task_count">待录制任务 %1$d 个</string>
  <string name="label_review_task_count">待评审任务 %1$d 个</string>

  <string name="button_record_video">开始录制</string>
  <string name="button_review_video">开始评审</string>
  <string name="tip_video_creation_time">创建时间: %1$s</string>
  <string name="tip_welcome">欢迎 %1$s!</string>
  <string name="no_new_task">没有新的任务</string>

  <!-- activity_setting -->
  <string name="label_recording_setting_title">手语录制设置</string>
  <string name="tv_prepare_time">录制准备时长</string>
  <string name="tv_record_time">录制时长调整</string>
  <string name="label_other_setting_title">其他设置</string>
  <string name="btn_help"> 积分规则介绍</string>
  <string name="btn_change_password">修改密码</string>
  <string name="btn_logout">退出帐号</string>
  <string name="title_activity_help">帮助</string>
  <string name="label_setting_prepare_time">%1$d 秒</string>
  <string name="label_setting_recording_scale">%1$d%%</string>
  <string name="label_help_content">您的积分反映了您的录制和评审任务执行的综合质量。\n您录制的手语训练视频如果评判为符合通用手语规范，则会加分，否则减分。所以请您在录制前尽量熟悉通用手语的规范。\n您对其他用户录入的手语视频的审查结果将被抽查，抽查的评审正确率将会对评审数量加权为积分。所以也请您在评审时做出谨慎的判断。\n如果有任何疑问或反馈意见，欢迎联系\nsignalong-feedback@google.com!</string>
  <string name="label_help_title">积分规则</string>
  <string name="label_change_password">修改密码</string>
  <string name="label_old_password">原密码</string>
  <string name="label_new_password">新密码</string>
  <string name="label_confirm_password">确认密码</string>
  <string name="btn_dialog_help_ok">确定</string>

  <!-- item_recording_data_view -->
  <string name="label_my_video_gloss_text">手语</string>
  <string name="label_my_video_creation_time">创建时间</string>
  <string name="tip_request_fail">请求失败</string>
  <string name="label_empty_video_list">\(暂无\)</string>
  <string name="label_gloss_status">评审状态</string>
  <string name="label_gloss_approved_counter">评为正确</string>
  <string name="label_gloss_rejected_counter">评为错误</string>

  <!--  -->
  <string name="label_gloss_status_rejected">未通过</string>
  <string name="label_gloss_status_pending_approval">待评审</string>
  <string name="label_gloss_status_approved">已通过</string>

  <!-- item_profile_data_view -->
  <string name="label_my_profile_title">%1$s, 您目前的总积分是</string>
  <string name="label_my_recording_score">录制积分 %1$d， </string>
  <string name="label_my_review_score">评审积分 %1$d</string>

  <!-- fragment_my_videos-->
  <string name="label_approved_video_title">通过</string>
  <string name="label_pending_video_title">待评审</string>
  <string name="label_rejected_video_title">未通过</string>
  <string name="label_video_total_count">共 %1$d 段</string>

  <!-- activity_video_review -->
  <string name="button_review_result_approve">正确</string>
  <string name="button_review_result_reject">错误</string>
  <string name="label_review_word_prompt">审核 \"%1$s\"</string>
  <string name="label_task_number">任务 %1$d</string>
  <string name="tip_finish_count_task"> 你已经完成了 %1$d 次审核，辛苦你了！</string>
  <string name="tip_no_task"> 你没打过评分！</string>
  <string name="label_finish_all">你太给力啦！所有视频都被你审核过了，明天再来！</string>
  <string name="btn_ok">好的</string>

  <!-- fragment_video_view -->
  <string name="button_replay">重放</string>

  <string name="label_loading">加载中...</string>

  <!-- fragment_intro -->
  <string name="button_ok">确定</string>
  <string name="button_back">返回</string>
  <string name="label_content_intro_check_list">需要录制的手语提示文字将自动派发给你,将以 10 个为一组。您可以根据个人手语语速在设置中调整录制的快慢。</string>
  <string name="label_title_intro_check_list">自动发放录制任务</string>
  <string name="label_content_intro_pause_recording">您可以在任何时候暂停录制，系统会调出相应的通用手语规范视频供您查看学习。您也可以在任何时候返回主界面，已经完成的录制视频会保留在服务器上。</string>
  <string name="label_title_intro_pause_recording">暂停或退出录制</string>
  <string name="label_content_intro_align_body">将手机稳定放在 30-40 厘米的水平位置,确保身体在识别区域内，否则无法符合要求。</string>
  <string name="label_title_intro_align_body">留意动作录制范围</string>
  <string name="label_content_intro_review">请判断手语视频是否符合国家通用手语的规范，您的评价会获得积分，积分可用于后续活动。接下来就看你的啦。</string>
  <string name="label_title_intro_review">审查手语视频</string>
  <string name="label_recording_time">录制时间</string>

  <!-- activity_change_password -->
  <string name="tip_change_password_successful">成功修改密码</string>
  <string name="tip_change_password_failed">修改密码失败</string>
  <string name="tip_passwords_not_equal">两次新密码不同</string>
  <string name="tip_new_password_is_equal_to_old">新旧密码不能一样</string>
  <string name="tip_video_download_failure">视频下载失败</string>
  <string name="password_is_less_6_chars">密码不能少于 6 位</string>
  <string name="title_setting">设置</string>
    <string name="title_activity_agreement">AgreementActivity</string>
  <string name="btn_knowledge_agreement" >下一步</string>
    <string name="label_confirm_agreement">我确认以上合同是我本人签署</string>
  <string name="title_agreement">协议确认</string>
  <string name="btn_reject_agreement">退出</string>

  <!--Upgrade apk-->
  <string name="upgrade_title">检测到新版本</string>
  <string name="upgrade_message">是否下载新版本？</string>
  <string name="upgrade_under_mobile_hint">当前处于手机网络，是否下载更新？</string>
  <string name="upgrade_no_network">当前没有网络可用</string>
  <string name="upgrade_yes">下载</string>
  <string name="upgrade_no">暂不</string>
  <string name="upgrade_cancel">取消</string>
  <string name="upgrade_downloading">下载中</string>
  <string name="upgrade_done">下载成功</string>
  <string name="upgrade_error">下载失败</string>
  <string name="upgrade_request_permission_hint">更新应用需要存储权限</string>
  <string name="enforce_exit">强制退出</string>
  <string name="cancel">取消</string>
  <string name="enforce_logout">强制登出</string>
  <string name="check_uploading">上传检查</string>
  <string name="has_uploading_task">您有未上传成功的视频</string>

</resources>
