<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="24dp"
    android:paddingRight="24dp">
  <LinearLayout
      android:layout_centerInParent="true"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center_horizontal"
      android:orientation="vertical">

    <TextView
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/title_login"
        android:textColor="#ff202124"
        android:textSize="24sp" />

    <android.support.design.widget.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="24dp">
      <android.support.design.widget.TextInputEditText
          android:singleLine="true"
          android:id="@+id/username_edit_text"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:imeOptions="actionNext"
          android:hint="@string/tv_username"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:passwordToggleEnabled="true"
        android:layout_marginBottom="24dp">
      <android.support.design.widget.TextInputEditText
          android:singleLine="true"
          android:inputType="textPassword"
          android:id="@+id/password_edit_text"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:imeOptions="actionGo"
          android:hint="@string/tv_password"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:textColor="@color/white"
        android:background="@color/highLight"
        android:gravity="center"
        android:padding="0dp"
        android:id="@+id/login_button"
        android:layout_width="264dp"
        android:layout_height="36dp"
        android:text="@string/btn_login"
        android:layout_marginBottom="14dp"/>
  </LinearLayout>
</RelativeLayout>
