<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp">
  <VideoView
      android:layout_alignParentStart="true"
      android:layout_alignParentEnd="true"
      android:layout_alignParentTop="true"
      android:layout_alignParentBottom="true"
      android:id="@+id/video_view"
      android:layout_centerInParent="true"
      android:layout_width="match_parent"
      android:layout_height="match_parent" />
  <LinearLayout
      android:alpha="0.7"
      android:background="@color/back"
      android:layout_alignParentTop="true"
      android:layout_width="match_parent"
      android:layout_height="135dp"
      android:orientation="vertical">
    <Button
        android:id="@+id/back_button"
        android:background="@android:color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_back"
        android:textColor="@color/white"/>
    <TextView
        android:textColor="@color/white"
        android:id="@+id/task_number_textview"
        android:gravity="center"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:textColor="@color/white"
        android:id="@+id/review_word_textview"
        android:gravity="center"
        android:background="@android:color/transparent"
        android:textSize="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
  </LinearLayout>
  <ProgressBar
      android:layout_centerInParent="true"
      android:visibility="gone"
      android:id="@+id/loading_progressbar"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"/>

  <RelativeLayout
      android:id="@+id/approve_reject_buttons_layout"
      android:layout_alignParentBottom="true"
      android:layout_width="match_parent"
      android:layout_height="100dp"
      android:paddingBottom="20dp"
      android:visibility="invisible">
    <Button
        android:id="@+id/review_result_approve_button"
        android:layout_alignParentLeft="true"
        android:layout_height="wrap_content"
	      android:layout_width="wrap_content"
        android:layout_marginStart="50dp"
        android:background="@color/green"
        android:textColor="@color/white"
	      android:text="@string/button_review_result_approve" />
    <Button
        android:id="@+id/review_result_reject_button"
        android:layout_alignParentRight="true"
        android:layout_height="wrap_content"
	      android:layout_width="wrap_content"
        android:layout_marginEnd="50dp"
        android:background="@color/red"
        android:textColor="@color/white"
	      android:text="@string/button_review_result_reject" />
  </RelativeLayout>
  <LinearLayout
      android:id="@+id/finish_layout"
      android:visibility="gone"
      android:layout_alignParentBottom="true"
      android:background="#e0000000"
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="120dp">
    <TextView
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textColor="@color/white"
        android:background="#e0000000"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:text="@string/label_finish_all"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#e0000000">
      <Button
          android:id="@+id/ok_button"
          android:textColor="@color/white"
          android:background="#e0000000"
          android:layout_alignParentRight="true"
          android:text="@string/btn_ok"
          android:layout_width="120dp"
          android:layout_height="match_parent" />
    </RelativeLayout>
  </LinearLayout>
</RelativeLayout>
