<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

  <android.support.v7.widget.Toolbar
      android:id="@+id/setting_toolbar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="?attr/colorPrimary"
      android:minHeight="?attr/actionBarSize"
      android:theme="?attr/actionBarTheme"
      app:title="@string/title_setting"
      app:titleTextColor="@color/white" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:padding="18dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="18dp">

      <TextView
          android:id="@+id/setting_prepare_time_textview"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginEnd="20dp"
          android:layout_marginBottom="14dp"
          android:text="@string/tv_prepare_time" />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="20dp"
          android:layout_below="@id/setting_prepare_time_textview"
          android:orientation="horizontal">

        <!-- Note that here the prepare time is ranged from 1 to 10 seconds.
          The max can only reflect the width of the range.
        -->
        <SeekBar
            android:id="@+id/prepare_time_seek_bar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:max="9"
	          android:progress="3"
            android:progressBackgroundTint="@color/aliceBlue"
            android:tickMark="@drawable/circle"
            android:tickMarkTint="@color/highLight" />

        <TextView
            android:id="@+id/textview_prepare_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textAlignment="viewEnd"
            android:textSize="15sp" />
      </LinearLayout>
    </RelativeLayout>

    <View
        style="@style/Spacer"
        android:background="@color/light_grey" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="18dp">

      <TextView
          android:id="@+id/setting_record_time_textview"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="14dp"
          android:text="@string/tv_record_time" />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="20dp"
          android:layout_below="@id/setting_record_time_textview"
          android:orientation="horizontal">

        <!--Note that the max value is only the range of value it shows
          In this case, the record time scaling factor is ranged from 0.5 to 2.
        -->
        <SeekBar
            android:id="@+id/record_time_seek_bar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:max="150"
	          android:progress="50"
            android:progressBackgroundTint="@color/aliceBlue"
            android:tickMark="@drawable/circle"
            android:tickMarkTint="@color/highLight" />

        <TextView
            android:id="@+id/textview_record_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textAlignment="viewEnd"
            android:textSize="15sp" />
      </LinearLayout>
    </RelativeLayout>

    <View
        style="@style/Spacer"
        android:background="@color/light_grey" />

    <Button
        android:id="@+id/help_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:background="@android:color/transparent"
        android:gravity="center_vertical"
        android:text="@string/btn_help" />

    <View
        style="@style/Spacer"
        android:background="@color/light_grey" />

    <Button
        android:id="@+id/change_password_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:background="@android:color/transparent"
        android:gravity="center_vertical"
        android:text="@string/btn_change_password" />

    <View
        style="@style/Spacer"
        android:background="@color/light_grey" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/btn_logout" />

  </LinearLayout>

</LinearLayout>
