<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    android:background="@android:color/transparent">

  <android.support.v7.widget.CardView
      xmlns:card_view="http://schemas.android.com/apk/res-auto"
      style="@style/TaskCard"
      android:id="@+id/recorded_data_cardview"
      android:elevation="3dp"
      android:layout_width="match_parent"
      android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">
        <TextView
            android:text="@string/label_my_video_gloss_text"
            android:textSize="16dp"
            android:paddingRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/gloss_text_textview"
            android:textSize="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
      </LinearLayout>
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
          <TextView
              android:text="@string/label_my_video_creation_time"
              android:textSize="16dp"
              android:paddingRight="10dp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>
          <TextView
              android:id="@+id/gloss_creation_time_textview"
              android:textSize="16dp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
          <TextView
              android:text="@string/label_gloss_status"
              android:textSize="16dp"
              android:paddingRight="10dp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>
          <ImageButton
              android:id="@+id/gloss_status_button"
              android:background="@android:color/transparent"
              android:layout_gravity="center_vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content" />
        </LinearLayout>
      </LinearLayout>
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
          <TextView
              android:text="@string/label_gloss_approved_counter"
              android:textSize="16dp"
              android:paddingRight="10dp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>
          <TextView
              android:id="@+id/gloss_approved_counter_textview"
              android:textSize="16dp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
          <TextView
              android:text="@string/label_gloss_rejected_counter"
              android:textSize="16dp"
              android:paddingRight="10dp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>
          <TextView
              android:id="@+id/gloss_rejected_counter_textview"
              android:textSize="16dp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" />
        </LinearLayout>
      </LinearLayout>
    </LinearLayout>
  </android.support.v7.widget.CardView>
</android.support.v7.widget.LinearLayoutCompat>
