<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
  android:background="@android:color/transparent">
  <android.support.v7.widget.CardView
      xmlns:card_view="http://schemas.android.com/apk/res-auto"
      style="@style/TaskCard"
      android:id="@+id/task_cardview"
      android:layout_gravity="center"
      android:layout_margin="@dimen/fab_margin"
      android:elevation="3dp"
      android:layout_width="match_parent"
      android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
      <TextView
          android:id="@+id/my_profile_title_textview"
          android:text="@string/label_my_profile_title"
          android:textSize="16dp"
          android:padding="10dp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"/>
      <TextView
          android:id="@+id/my_total_score_textview"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textSize="32dp"
          android:textColor="@color/highLight"
          android:gravity="center"/>
      <LinearLayout
          android:paddingTop="10dp"
          android:paddingBottom="20dp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:gravity="center">
        <TextView
            android:id="@+id/my_recording_score_textview"
            android:text="@string/label_my_recording_score"
            android:paddingHorizontal="10dp"
            android:textStyle="bold"
            android:textSize="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/my_review_score_textview"
            android:text="@string/label_my_review_score"
            android:paddingHorizontal="10dp"
            android:textStyle="bold"
            android:textSize="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
      </LinearLayout>
    </LinearLayout>
  </android.support.v7.widget.CardView>
</LinearLayout>
